--- a/schliessanlagen-konfigurator/publish/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/publish/wwwroot/css/site.css
@@ -104,7 +104,7 @@ html, body {
 #Galery {
     margin-top: 20px;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns:auto auto;
 }
 #keyPoint {
     position: relative;
@@ -1932,7 +1932,7 @@ html, body {
 
     #product_desciptions {
         font-size: 16px;
-        min-height: 200px;
+        min-height: auto;
         margin-top: 20px;
         max-width: 340px;
     }
@@ -1950,7 +1950,6 @@ html, body {
 
     #chekProduct {
         padding: 20px 150px 20px 150px;
-        margin-top: 50px;
         margin-bottom: 20px;
     }
 
@@ -2867,6 +2866,14 @@ html, body {
         margin-right: auto;
         border-radius: 5px;
     }
+    .ExelItem2 {
+        grid-template-columns: 200px auto;
+        display: grid;
+        background: white;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 5px;
+    }
     #countTurSelect {
         outline: none;
         margin-left:5px;
@@ -2904,7 +2911,7 @@ html, body {
     #product_desciptions {
         font-size: 20px;
         margin-top: 20px;
-        min-height: 200px;
+        min-height: auto;
     }
 
     #closeMenu {
@@ -2920,7 +2927,6 @@ html, body {
 
     #chekProduct {
         padding: 20px 150px 20px 150px;
-        margin-top: 50px;
         margin-bottom: 20px;
     }
 
