--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
@@ -118,8 +118,8 @@
                     <div id="AussenProfilDopel">
                         @foreach (var list in @ViewBag.Size)
                         {
-                            <input class="form-control" name="Size" value="@list.sizeVorhangschloss" />
-                            <input class="form-control" name="CostSize" value="@list.Cost" />
+                            <input class="form-control" name="Size" id="aus" value="@list.sizeVorhangschloss" />
+                            <input class="form-control" name="CostSize" id="inter" value="@list.Cost" />
                         }
                     </div>
                 </div>
