--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
@@ -7,6 +7,13 @@
     ViewData["Title"] = $"System_Auswählen/{@Model.userKey}";
     int countItem = 0;
 }
+<style>
+    .galerry{
+        justify-content: start;
+        grid-template-columns: auto auto auto;   
+        display: none;
+    } 
+</style>
 
 <div class="shadow-lg  mb-5 bg-body-tertiary rounded" id="selectedSystem_filter">
     <div>
@@ -80,7 +87,7 @@
 
                                             <img decoding="async" alt="@item.NameSystem" id="ImgSelecter-@countItem" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/compression/"+@item.ImageName)" asp-append-version="true" width="150px" height="150px" />
 
-                                            <div id="Galery-@countItem" style="display:none"> 
+                                            <div class="galerry" id="Galery-@countItem">
                                             @foreach (var list in ViewBag.Gallery)
                                             {
                                                     @if (item.SystemId == list.SysteamPriceKeyId)
@@ -103,7 +110,7 @@
                                             </div>
 
                                             <div>
-                                            <input type="button" id="button-@countItem" onclick="showInfo('@countItem','@item.NameSystem')" value="▾ mehr Details" class="btn btn-danger" />
+                                                <input type="button" id="button-@countItem" onclick="showInfo('@countItem','@item.NameSystem')" value="&#8595; mehr Details" class="btn btn-danger" />
                                             </div>
                                            
                                             <div id="product_desciptions-@countItem">
@@ -136,7 +143,7 @@
 
                                     <img decoding="async" alt="@item.NameSystem" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/compression/"+@item.ImageName)" asp-append-version="true" width="150px" height="150px" />
 
-                                        <div id="Galery-@countItem" style="display:none">
+                                        <div id="Galery-@countItem" class="galerry">
                                             @foreach (var list in ViewBag.Gallery)
                                             {
                                                 @if (item.SystemId == list.SysteamPriceKeyId)
@@ -187,7 +194,7 @@
 
                                     <img decoding="async" alt="@item.NameSystem" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/compression/"+@item.ImageName)" asp-append-version="true" width="150px" height="150px" />
 
-                                        <div id="Galery-@countItem" style="display:none">
+                                        <div id="Galery-@countItem" class="galerry">
                                             @foreach (var list in ViewBag.Gallery)
                                             {
                                                 @if (item.SystemId == list.SysteamPriceKeyId)
@@ -210,7 +217,7 @@
                                                 </div>
                                             </div>
                                                     <div>
-                                                        <input type="button" id="button-@countItem" onclick="showInfo('@countItem','@item.NameSystem')" value="▾ mehr Details" class="btn btn-danger" />
+                                                        <input type="button" id="button-@countItem" onclick="showInfo('@countItem','@item.NameSystem')" value="&#8595; mehr Details" class="btn btn-danger" />
                                                     </div>
 
 
@@ -238,8 +245,8 @@
                             <div class="ExelItem2 shadow-lg mb-4 bg-body-tertiary rounded" id="@countItem">
                                         <div id="productImage">
                                     <img decoding="async" alt="@item.NameSystem" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/compression/"+@item.ImageName)" asp-append-version="true" width="150px" height="150px" />
-                                       
-                                       <div id="Galery-@countItem" style="display:none">
+
+                                        <div id="Galery-@countItem" class="galerry">
                                             
                                             @foreach (var list in ViewBag.Gallery)
                                             {
@@ -262,7 +269,7 @@
                                                 </div>
                                             </div>
                                                 <div>
-                                                    <input type="button" id="button-@countItem" onclick="showInfo('@countItem','@item.NameSystem')" value="▾ mehr Details" class="btn btn-danger" />
+                                                     <input type="button" id="button-@countItem" onclick="showInfo('@countItem','@item.NameSystem')" value="&#8595; mehr Details" class="btn btn-danger" />
                                                 </div>
 
 
@@ -291,7 +298,7 @@
                                         <div id="productImage">
                                     <img decoding="async" alt="@item.NameSystem" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/compression/"+@item.ImageName)" asp-append-version="true" width="150px" height="150px" />
 
-                                                <div id="Galery-@countItem" style="display:none">
+                                                <div id="Galery-@countItem" class="galerry">
                                                     @foreach (var list in ViewBag.Gallery)
                                                     {
                                                         @if (item.SystemId == list.SysteamPriceKeyId)
@@ -313,7 +320,7 @@
                                                 </div>
                                             </div>
                                                 <div>
-                                                    <input type="button" id="button-@countItem" onclick="showInfo('@countItem','@item.NameSystem')" value="▾ mehr Details" class="btn btn-danger" />
+                                                        <input type="button" id="button-@countItem" onclick="showInfo('@countItem','@item.NameSystem')" value="&#8595; mehr Details" class="btn btn-danger" />
                                                 </div>
 
 
@@ -342,7 +349,7 @@
                                         <div id="productImage">
                                             <img decoding="async" alt="@item.NameSystem" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/compression/"+@item.ImageName)" asp-append-version="true" width="150px" height="150px" />
 
-                                                <div id="Galery-@countItem" style="display:none">
+                                                <div id="Galery-@countItem" class="galerry">
                                                     @foreach (var list in ViewBag.Gallery)
                                                     {
                                                         @if (item.SystemId == list.SysteamPriceKeyId)
@@ -365,10 +372,8 @@
                                                 </div>
                                             </div>
                                                 <div>
-                                                    <input type="button" id="button-@countItem" onclick="showInfo('@countItem','@item.NameSystem')" value="▾ mehr Details" class="btn btn-danger" />
+                                                    <input type="button" id="button-@countItem" onclick="showInfo('@countItem','@item.NameSystem')" value="&#8595; mehr Details" class="btn btn-danger" />
                                                 </div>
-
-
 
                                                 <div id="product_desciptions-@countItem">
 
@@ -417,11 +422,11 @@
                     descriptionsItem.innerHTML = data.desctiptionsSysteam;
                 })
              Galery.style.display = "grid ";
-            button.value = "▴ weniger Details";
+            button.value = "↑ weniger Details";
         } 
         else 
         {
-            button.value = "▾ mehr Details";
+            button.value = "↓ mehr Details";
             descriptionsItem.innerHTML = "";
             Galery.style.display = "none"; // Скрываем галерею, когда описание скрыто
            
